--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,8 @@
         <div class="container-fluid">
             <!-- header -->
             <header th:replace="fragments/components::header"></header>
+            <!-- main categories -->
+            <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
             <div th:replace="fragments/components::title(text = 'Login')"></div>
             <div class="row">
