--- a/src/main/resources/templates/newCategory.html
+++ b/src/main/resources/templates/newCategory.html
@@ -6,6 +6,8 @@
     <body>
         <div class="container-fluid">
             <header th:replace="fragments/components::header"></header>
+            <!-- main categories -->
+            <div th:replace="fragments/components::mainCatsNavBar"></div>
             <header th:replace="fragments/components::title(text = 'New Category')"></header>
             <div class="row">
                 <div class="col-sm-3 bg-white"></div>
