--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -7,6 +7,8 @@
     <body>
         <div class="container-fluid">
             <header th:replace="fragments/components::header"></header>
+            <!-- main categories -->
+            <div th:replace="fragments/components::mainCatsNavBar"></div>
             <div th:replace="fragments/components::title(text = 'Categories')"></div>
             <div th:replace="fragments/components::addButton('newCategory')"></div>
             <table class="table">
