--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -6,6 +6,8 @@
     <body>
         <div class="container-fluid">
             <div th:replace="fragments/components::header"></div>
+            <!-- main categories -->
+            <div th:replace="fragments/components::mainCatsNavBar"></div>
             <div th:replace="fragments/components::title(text = 'Edit Profile')"></div>
             <div class="row">
                 <div class="col-sm-3 bg-white"></div>
