--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -49,7 +49,7 @@
                                     </div>
                                 </li>
                                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-                                    <a class="nav-link text-white font-weight-bold" th:href="@{/admin/newBook}">New Book</a>
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/books}">Books</a>
                                 </li>
                                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
                                     <a class="nav-link text-white font-weight-bold" th:href="@{/admin/categories}">Categories</a>
