added proper style to admin/categories

--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -14,7 +14,9 @@
             <!-- main content -->
             <div class="row">
                 <div class="col-sm-2 bg-white"></div>
-                <div class="col-sm-8 bg-light" id="root-hook"></div>
+                <div class="col-sm-8 bg-white" id="root-hook">
+                    <!-- dynamic content here -->
+                </div>
                 <div class="col-sm-2 bg-white"></div>
             </div>
             <!-- footer -->
