-widened TEXT_BASIC pattern -fixed problem with determining top authors, publishers and languages from a no-book category -main text color changed to BS4-secondary -added cancel button to components.html -added new category button to categories.html

--- a/src/main/resources/static/css/fmstyle.css
+++ b/src/main/resources/static/css/fmstyle.css
@@ -3,7 +3,7 @@
 
 .accordion {
     background-color: #e9ecef; /* BS4 jumbotron */
-    color: #343a40; /* BS4 dark */
+    color: #6c757d; /* BS4 secondary */
     cursor: pointer;
     padding: 18px;
     width: 100%;
