--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -15,14 +15,22 @@
             <div class="row">
                 <div class="col-sm-2 bg-white"></div>
                 <div class="col-sm-8 bg-white" id="root-hook">
-                    <!-- dynamic content here -->
+                    <!-- new category -->
+                    <div class="my-2">
+                        <a class="btn btn-outline-secondary align-center px-4" th:href="@{/admin/newCategory}">
+                            <i class="fas fa-folder-plus fa-lg mr-4"></i>New Category
+                        </a>
+                    </div>
+                    <hr/>
+                    <!--
+                    dynamic content here
+                    -->
                 </div>
                 <div class="col-sm-2 bg-white"></div>
             </div>
             <!-- footer -->
             <footer th:replace="fragments/components::footer"></footer>
         </div>
-        <script th:src="@{/js/enableTooltips.js}"></script>
         <script th:utext="'let jsonStringCategories = \'' + ${jsonStringCategories} + '\';'"></script>
         <script th:src="@{/js/categoriesBuilder.js}"></script>
     </body>
