--- a/src/main/resources/templates/editCategory.html
+++ b/src/main/resources/templates/editCategory.html
@@ -35,7 +35,7 @@
                             </select>
                         </div>
                         <button th:replace="fragments/components::saveButton"></button>
-                        <button th:replace="fragments/components::cancelButton"></button>
+                        <a th:replace="fragments/components::cancelButton"></a>
                     </form>
                 </div>
                 <div class="col-sm-3 bg-white"></div>
