--- a/src/main/resources/templates/editPassword.html
+++ b/src/main/resources/templates/editPassword.html
@@ -32,6 +32,7 @@
                             <div th:replace="fragments/components::backendValidationFieldErrors('matchingPassword')"></div>
                         </div>
                         <button th:replace="fragments/components::saveButton"></button>
+                        <a th:replace="fragments/components::cancelButton"></a>
                     </form>
                 </div>
                 <div class="col-sm-3 bg-white"></div>
