--- a/src/main/resources/templates/newCategory.html
+++ b/src/main/resources/templates/newCategory.html
@@ -17,7 +17,7 @@
                             <label for="name">Name:</label>
                             <input class="form-control" type="text" th:field="*{name}" id="name" placeholder="enter name" th:pattern="${textBasicPattern}">
                             <div class="invalid-feedback">Please fill out this field correctly</div>
-                            <div th:replace="fragments/components::backendValidationErrors('name')"></div>
+                            <div th:replace="fragments/components::backendValidationFieldErrors('name')"></div>
                         </div>
                         <div class="form-group">
                             <label for="parent">Nested under:</label>
@@ -29,6 +29,7 @@
                             </select>
                         </div>
                         <button th:replace="fragments/components::saveButton"></button>
+                        <a th:replace="fragments/components::cancelButton"></a>
                     </form>
                 </div>
                 <div class="col-sm-3 bg-white"></div>
