--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -49,6 +49,7 @@
                             <div th:replace="fragments/components::backendValidationFieldErrors('lastName')"></div>
                         </div>
                         <button th:replace="fragments/components::saveButton"></button>
+                        <a th:replace="fragments/components::cancelButton"></a>
                     </form>
                 </div>
                 <div class="col-sm-3 bg-white"></div>
