added dialogue box confirmation on book and image removal. Closes #10

--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -36,8 +36,10 @@
         <script th:utext="'let jsonStringCategories = \'' + ${jsonStringCategories} + '\';'"></script>
         <script th:src="@{/js/categoriesBuilder.js}"></script>
         <script th:src="@{/js/categoriesStyler.js}"></script>
+        <!-- modal functionality -->
         <script>
             let baseUrl = "http://localhost:8080/firstmarket/admin/deleteCategory/";
+            // custom-htmlReady event is triggered at the end of categoriesBuilder job
         </script>
         <script th:src="@{/js/modalManager.js}"></script>
     </body>
