--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -144,9 +144,9 @@
                                                 <a class="btn btn-outline-secondary btn-sm align-center mb-3" th:href="@{/admin/editBook/{id}(id=${book.id})}" data-toggle="tooltip" title="Edit Book">
                                                     Edit Book<i class="fas fa-pen ml-2"></i>
                                                 </a>
-                                                <a class="btn btn-outline-secondary btn-sm align-center" th:href="@{/admin/deleteBook/{id}(id=${book.id})}" data-toggle="tooltip" title="Delete Book">
+                                                <button class="modalTrigger btn btn-outline-secondary btn-sm align-center" th:id="'del-' + ${book.id}" data-toggle="tooltip" title="Delete Book">
                                                     Delete Book<i class="fas fa-trash-alt ml-2"></i>
-                                                </a>
+                                                </button>
                                             </div>
                                         </div>
                                         <div class="col-sm-12">
@@ -174,6 +174,8 @@
                 <!-- right margin  -->
                 <div class="col-sm-1"></div>
             </div>
+            <!-- modal -->
+            <div th:replace="fragments/components::deletingModal(entity = 'Book')"></div>
             <!-- footer -->
             <div th:replace="fragments/components::footer"></div>
         </div>
@@ -183,5 +185,13 @@
         <script th:replace="fragments/components::paginationMvcVariables"></script>
         <script th:src="@{/js/paginationLinks.js}"></script>
         <script th:src="@{/js/paginationLegend.js}"></script>
+        <!-- modal functionality -->
+        <script>
+            let baseUrl = "http://localhost:8080/firstmarket/admin/deleteBook/";
+            document.addEventListener("DOMContentLoaded", function() {
+                document.dispatchEvent(new CustomEvent('custom-htmlReady'));
+            }, false);
+        </script>
+        <script th:src="@{/js/modalManager.js}"></script>
     </body>
 </html>
